@@ -1,7 +1,4 @@
 AUX portage-bashrc-ng-0.14.1-name-collision-filter-flags-fix.patch 2539 RMD160 fc5a5c1b5d218d2f2a14adcdc501788fd30dbd84 SHA1 0619b5c76ad581004b55e70353b49234bbc2992e SHA256 d065953194005a6983b4ad0cca98758eb47ab8a847330123a9ae41d642181e51
-DIST bashrc-v0.12.tar.gz 8938 RMD160 f14f43bf5dda2efc672cf490e35467053446aa0a SHA1 1b25fd353c574fecf49a3b1cb7e50f208dbf7198 SHA256 22bb9849321215795079f5ff585f15593c34fa29d5c25955f5c0233d31e6d916
 DIST portage-bashrc-ng-0.14.1.tar.bz2 13913 RMD160 be65e6d5aaa43d3004c6fbd960fc1338035983ba SHA1 faadea792f5a41d8779a5ecb6a4d76c8521f21ff SHA256 af291613726d8e817293e159946b3043fee4eb11938fc2d511541fef69eed020
-EBUILD portage-bashrc-ng-0.12_beta.ebuild 3220 RMD160 609e7ccc8790ddc78450ed2046d09b1b52839aaa SHA1 a87bb25c7286ff86b14d0b2eb0da77243df554c8 SHA256 54b3325362e1638e7cbf8568a4c21a376dcf0b2cf54c5cee0765c424220fa98b
 EBUILD portage-bashrc-ng-0.14.1-r1.ebuild 3697 RMD160 1b2e4cca39ed239af09beea4e156a1259d949857 SHA1 5fa38c5d4c706e2562bbfc57e06133dad5035ba2 SHA256 cf71738571268800ae03f62fe76df059fb7cce47d03758c015484f84817df197
-EBUILD portage-bashrc-ng-0.14.1.ebuild 3628 RMD160 4dffec1b9ca429a03b45eec1b1d6a6a8792d62e7 SHA1 ccba9a104f70a05ba293508be6eebfb7b94ede7d SHA256 ea7827ab0ef68d3714cddf00fed377187f8b9cec5b297acc52eee93cb74e630d
-MISC ChangeLog 322 RMD160 b650ff73c87758eed2b78180b3b800fc1d04a021 SHA1 50676fcee48902407e72be4aac19a5b2ed440d85 SHA256 fa3f46ec0ae4bc92ee873738599c50c2fa9d37b88ca43d1d026be7ed68d20c92
+MISC ChangeLog 462 RMD160 478e545af9f61d2620a6b81b22615b765fdf01b4 SHA1 4a643da1c84d51bd28bd99fdccb32a7830c37dea SHA256 0c4899ca64bf6124623e206ae684bfb3606036953ede61df2a9ff9314fbe9190
